[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtrlgnn"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "rl4co==0.5.2",
    "tsplib95==0.7.1",
    "pandas==2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.2",
    "ruff>=0.3",
    "pre-commit>=3.6",
]
notebooks = [
    "notebook>=7",
    "ipywidgets==8.1.5"
]

[project.scripts]
train = "experiments.train:main"
evaluate = "experiments.evaluate:main"

[tool.setuptools]
package-dir = { "src" = "src" }
